Added a ball that is trapped into the canvas

--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
   },
   "dependencies": {
     "react": "16.8.3",
-    "react-native": "0.59.8"
+    "react-native": "0.59.8",
+    "react-native-canvas": "^0.1.33",
+    "react-native-webview": "^5.10.0"
   },
   "devDependencies": {
     "@babel/core": "^7.4.5",
